--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             href="./assets/icons/icon.ico"
             type="image/x-icon"
         />
-        <title>JS HW-06 Calculate New Rate</title>
+        <title>JS HW-05 Father Twofold Older</title>
     </head>
     <body>
-        <h1>JS HW-06 Calculate New Rate</h1>
+        <h1>JS HW-05 Father Twofold Older</h1>
     </body>
 </html>
